# aint

./: .gitignore  main.py  pyproject.toml
aint/: cli_entrypoint.py
aint/domain/: flow.py  gen.py  syntax.py  units.py
aint/infrastructure/ai/: client.py  impl.py  templates.py
aint/presentation/: cli.py  definition_loaders.py  sources.py
test/: compiling.yml  grammar.yml  linking.yml  test.txt
